# capstone-rs

./: Cargo.toml
capstone-rs/: Cargo.toml  README.md
capstone-rs/benches/: my_benchmark.rs
capstone-rs/examples/: demo.rs  objdump.rs  parallel.rs
capstone-rs/fuzz/: Cargo.toml
capstone-rs/fuzz/fuzz_targets/: fuzz_target_disasm_x86_64.rs
capstone-rs/src/: capstone.rs  constants.rs  error.rs  instruction.rs  test.rs
capstone-rs/src/arch/: arm.rs  arm64.rs  evm.rs  m680x.rs  mips.rs  mod.rs  ppc.rs  riscv.rs  sparc.rs  tms320c64x.rs  x86.rs  xcore.rs
