[package]
authors = ["m4b <m4b.github.io@gmail.com>",
           "Richo Healey <richo@psych0tik.net>",
           "Travis Finkenauer <tmfinken@gmail.com>"]
description = "Frida's High level bindings to capstone disassembly engine (https://capstone-engine.org/)"
keywords = ["disassemble"]
license = "MIT"
name = "frida-capstone"
repository = "https://github.com/frida/capstone-rs"
readme = "../README.md"
edition = "2018"
version = "0.11.0"

[dependencies]
libc = { version = "0.2", default-features = false }

[dependencies.frida-gum-sys]
# TODO: Use published version
git = "https://github.com/frida/frida-rust.git"
branch = "capstone-enums"
# TODO: Expose all Frida Gum features via [features]
features = ["auto-download"]

[dev-dependencies]
macho = "0.*"
criterion = "0.3"
rayon = "1.1"

[[bench]]
name = "my_benchmark"
harness = false
